added top section and nav bar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Husain's Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GitHub Style Header</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to Husain's Portfolio</h1>
+
+  <header>
+    <div class="header-left">
+      <div class="logo-circle"></div>
+        <div>
+          <span class="repo-title">HusainBeepBop</span>
+          <span class="repo-subtitle">Mechanical Engineer</span>
+        </div>
+      </div>
+    <div class="status-text">currently: developing a website</div>
+  </header>
+
+  <nav class="navbar">
+    <a href="#" class="active">About</a>
+    <a href="#">Projects</a>
+    <a href="#">Art</a>
+    <a href="#">Socials</a>
+    <a href="#">Start Ups</a>
+  </nav>
+
+  <main class="main-content">
+    <h1>About</h1>
+    <p>Welcome to the About section! This is where I tell people what this page or project is about. 🚀</p>
+  </main>
+  
+  
   <script src="script.js"></script>
 </body>
 </html>
