added a theme toggle and also better url routing

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
         </div>
       </div>
     <div class="status-text">currently: developing a website</div>
+
+    <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
+
   </header>
 
   <nav class="navbar">
-    <a href="#" data-page="about" onclick="loadPage('about')" class="active">About</a>
-    <a href="#" data-page="projects" onclick="loadPage('projects')">Projects</a>
-    <a href="#" data-page="art" onclick="loadPage('art')">Art</a>
-    <a href="#" data-page="socials" onclick="loadPage('socials')">Socials</a>
-    <a href="#" data-page="startup" onclick="loadPage('startup')">Start Ups</a>
+    <a href="#about" data-page="about" onclick="loadPage('about')" class="active">About</a>
+    <a href="#projects" data-page="projects" onclick="loadPage('projects')">Projects</a>
+    <a href="#art" data-page="art" onclick="loadPage('art')">Art</a>
+    <a href="#socials" data-page="socials" onclick="loadPage('socials')">Socials</a>
+    <a href="#startup" data-page="startup" onclick="loadPage('startup')">Start Ups</a>
   </nav>
 
   <main id="main-content" class="main-content"></main>
