aligned the status text

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
           <span class="repo-subtitle">Mechanical Engineer</span>
         </div>
       </div>
-    <div class="status-text">currently: developing a website</div>
-
-    <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
+    
+    <div class="status-container">
+      <div class="status-text">currently: developing a website step by step</div>
+      <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
+    </div>
 
   </header>
 
