--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
   <nav class="navbar">
     <a href="#about" data-page="about" onclick="loadPage('about')" class="active">About</a>
     <a href="#projects" data-page="projects" onclick="loadPage('projects')">Projects</a>
+    <a href="#blog" data-page="blog" onclick="loadPage('blog')">Blog</a>
     <a href="#art" data-page="art" onclick="loadPage('art')">Art</a>
-    <a href="#socials" data-page="socials" onclick="loadPage('socials')">Socials</a>
+    <a href="#contact" data-page="contact" onclick="loadPage('contact')">Contact</a>
     <a href="#startup" data-page="startup" onclick="loadPage('startup')">Start Ups</a>
   </nav>
 
