--- a/blog.html
+++ b/blog.html
@@ -2,21 +2,17 @@
 <p>Welcome to my blog. I write about tech, design, mindset, and things I build.</p>
 
 <div class="blog-list">
-  <div class="blog-item" onclick="loadBlog('how-i-built-this')">
-    <img src="images/thumb1.jpg" alt="How I Built This" class="blog-thumb" />
-    <div class="blog-info">
-      <span class="blog-date">April 6, 2025</span>
-      <h2 class="blog-title">How I Built This</h2>
-      <p class="blog-snippet">A behind-the-scenes look into how I created this site from scratch...</p>
-    </div>
-  </div>
-
+  
   <div class="blog-item" onclick="loadBlog('reacher-mindset')">
-    <img src="images/thumb2.jpg" alt="The Reacher Mindset" class="blog-thumb" />
+
+    <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
+
     <div class="blog-info">
       <span class="blog-date">April 4, 2025</span>
       <h2 class="blog-title">The Reacher Mindset</h2>
       <p class="blog-snippet">What Jack Reacher can teach us about clarity, confidence, and calculated thinking.</p>
     </div>
+
   </div>
+
 </div>
