--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 
 <div class="blog-list">
   
-  <div class="blog-item" onclick="loadBlog('reacher-mindset')">
+  <div class="blog-item" onclick="loadBlog('reacher-mindset.html')">
 
     <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
 
