--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,7 @@
 <p>Welcome to my blog. I write about tech, design, mindset, and things I build.</p>
 
 <div class="blog-list">
-  
   <div class="blog-item" onclick="loadBlog('reacher-mindset.html')">
-
     <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
 
     <div class="blog-info">
@@ -12,7 +10,25 @@
       <h2 class="blog-title">The Reacher Mindset</h2>
       <p class="blog-snippet">What Jack Reacher can teach us about clarity, confidence, and calculated thinking.</p>
     </div>
-
   </div>
 
+  <div class="blog-item" onclick="loadBlog('build-better-tech.html')">
+    <img src="assets/test2.png" alt="Build Better Tech" class="blog-thumb" />
+
+    <div class="blog-info">
+      <span class="blog-date">April 6, 2025</span>
+      <h2 class="blog-title">Build Better Tech</h2>
+      <p class="blog-snippet">A brief on why simplicity wins and how to design systems that scale elegantly.</p>
+    </div>
+  </div>
+
+  <div class="blog-item" onclick="loadBlog('makers-mind.html')">
+    <img src="assets/test3.png" alt="The Maker's Mind" class="blog-thumb" />
+
+    <div class="blog-info">
+      <span class="blog-date">April 7, 2025</span>
+      <h2 class="blog-title">The Maker's Mind</h2>
+      <p class="blog-snippet">Mindsets and habits that help creators stay sharp, focused, and always building.</p>
+    </div>
+  </div>
 </div>
