--- a/blog.html
+++ b/blog.html
@@ -2,15 +2,16 @@
 <p>Welcome to my blog. I write about tech, design, mindset, and things I build.</p>
 
 <div class="blog-list">
-  <div class="blog-item" onclick="loadBlog('reacher-mindset.html')">
-    <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
-
-    <div class="blog-info">
-      <span class="blog-date">April 4, 2025</span>
-      <h2 class="blog-title">The Reacher Mindset</h2>
-      <p class="blog-snippet">What Jack Reacher can teach us about clarity, confidence, and calculated thinking.</p>
+  
+    <div class="blog-item" data-blog="reacher-mindset.html">
+        <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
+        <div class="blog-info">
+          <span class="blog-date">April 4, 2025</span>
+          <h2 class="blog-title">The Reacher Mindset</h2>
+          <p class="blog-snippet">What Jack Reacher can teach us about clarity, confidence, and calculated thinking.</p>
+        </div>
     </div>
-  </div>
+      
 
   <div class="blog-item" onclick="loadBlog('build-better-tech.html')">
     <img src="assets/test2.png" alt="Build Better Tech" class="blog-thumb" />
