finally it might work

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 
 <div class="blog-list">
   
-    <div class="blog-item" data-blog="reacher-mindset.html">
+    <div class="blog-item" data-blog="blogs/reacher-mindset.html">
         <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
         <div class="blog-info">
           <span class="blog-date">April 4, 2025</span>
