--- a/blog.html
+++ b/blog.html
@@ -2,14 +2,14 @@
 <p>Welcome to my blog. I write about tech, design, mindset, and things I build.</p>
 
 <div class="blog-list">
-  
-    <div class="blog-item" data-blog="blogs/reacher-mindset.html">
-        <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
-        <div class="blog-info">
-          <span class="blog-date">April 4, 2025</span>
-          <h2 class="blog-title">The Reacher Mindset</h2>
-          <p class="blog-snippet">What Jack Reacher can teach us about clarity, confidence, and calculated thinking.</p>
-        </div>
+  <div class="blog-item" data-page="blogs/reacher-mindset">
+    <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
+    <div class="blog-info">
+      <span class="blog-date">April 4, 2025</span>
+      <h2 class="blog-title">The Reacher Mindset</h2>
+      <p class="blog-snippet">
+        What Jack Reacher can teach us about clarity, confidence, and calculated thinking.
+      </p>
     </div>
-    
+  </div>
 </div>
