--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     
     <div class="status-container">
-      <div class="status-text">currently: developing a website step by step</div>
+      <div class="status-text">currently: sleeping</div>
       <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
     </div>
 
