added the headshot to the website

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <div class="header-left">
-      <div class="logo-circle"></div>
+      <div class="logo-circle"><img src="./assets/logo.jpeg" alt="Headshot Husain Lokhandwala" /></div>
         <div>
           <span class="repo-title">HusainBeepBop</span>
           <span class="repo-subtitle">Mechanical Engineer</span>
