--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
   <nav class="navbar">
     <a href="#about" data-page="about" onclick="loadPage('about')" class="active">About</a>
-    <a href="#projects" data-page="projects" onclick="loadPage('projects')">Projects</a>
-    <a href="#blog" data-page="blog" onclick="loadPage('blog')">Blog</a>
-    <a href="#art" data-page="art" onclick="loadPage('art')">Art</a>
-    <a href="#contact" data-page="contact" onclick="loadPage('contact')">Contact</a>
-    <a href="#startup" data-page="startup" onclick="loadPage('startup')">Start Ups</a>
+    <a style="visibility: hidden;" href="#projects" data-page="projects" onclick="loadPage('projects')">Projects</a>
+    <a style="visibility: hidden;" href="#blog" data-page="blog" onclick="loadPage('blog')">Blog</a>
+    <a style="visibility: hidden;" href="#art" data-page="art" onclick="loadPage('art')">Art</a>
+    <a style="visibility: hidden;" href="#contact" data-page="contact" onclick="loadPage('contact')">Contact</a>
+    <a style="visibility: hidden;" href="#startup" data-page="startup" onclick="loadPage('startup')">Start Ups</a>
   </nav>
 
   <main id="main-content" class="main-content"></main>
