Added a comment tfor the hidden style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Portfolio Husain Lokhandwala</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
+<!-- style="visibility: hidden;" -->
+ 
 <body>
 
   <header>
