made some changes to get it ready for the deployment and hid some elements and all

--- a/about.html
+++ b/about.html
@@ -1,3 +1,2 @@
 <!-- about.html -->
-<h1>About</h1>
-<p>This is the About page loaded from an external HTML file. ✨</p>
+<h1>This is the About Page</h1>
