--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     
     <div class="status-container">
-      <div class="status-text">currently: sleeping</div>
+      <div class="status-text">Currently: Learning</div>
       <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
     </div>
 
@@ -32,7 +32,7 @@
     <a href="#projects" data-page="projects" onclick="loadPage('projects')">Projects</a>
     <a href="#blog" data-page="blog" onclick="loadPage('blog')">Blog</a>
     <a href="#contact" data-page="contact" onclick="loadPage('contact')">Contact</a>
-    <a href="#startup" data-page="startup" onclick="loadPage('startup')">Start Ups</a>
+    <a style="visibility: hidden;" href="#startup" data-page="startup" onclick="loadPage('startup')">Start Ups</a>
   </nav>
 
   <main id="main-content" class="main-content"></main>
