--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <h1>My Blog</h1>
 <p>Welcome to my blog. I write about tech, design, mindset, and things I build.</p>
 
-<div class="blog-list">
+<div class="blog-list" style="visibility: hidden;">
   <div class="blog-item" data-page="blogs/reacher-mindset">
     <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
     <div class="blog-info">
