made it user friendly

--- a/projects.html
+++ b/projects.html
@@ -2,8 +2,8 @@
 <p>Welcome to my Projects Section. This is where I share the things I build.</p>
 
 <div class="blog-list" style="visibility: hidden;">
-  <div class="blog-item" data-page="projects/reacher-mindset">
-    <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
+  <div class="blog-item" data-page="projects/test-example">
+    <img src="assets/test.png" alt="1st Test Project" class="blog-thumb" />
     <div class="blog-info">
       <span class="blog-date">April 4, 2025</span>
       <h2 class="blog-title">1st Test Project</h2>
