--- a/about.html
+++ b/about.html
@@ -1,2 +1,3 @@
 <!-- about.html -->
 <h1>This is the About Page</h1>
+<p>Welcome to the about page of our website. You can update this to yoru liking and play around.</p>
