--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,14 @@
 <h1>My Blog</h1>
-<p>Welcome to my blog. I write about tech, design, mindset, and things I build.</p>
+<p>Welcome to my blog. This is your blog section and you can write you blog articles and all</p>
 
 <div class="blog-list" style="visibility: hidden;">
-  <div class="blog-item" data-page="blogs/reacher-mindset">
-    <img src="assets/test.png" alt="The Reacher Mindset" class="blog-thumb" />
+  <div class="blog-item" data-page="blogs/test-example">
+    <img src="assets/test.png" alt="Test Blog" class="blog-thumb" />
     <div class="blog-info">
       <span class="blog-date">April 4, 2025</span>
-      <h2 class="blog-title">The Reacher Mindset</h2>
+      <h2 class="blog-title">Test Blog</h2>
       <p class="blog-snippet">
-        What Jack Reacher can teach us about clarity, confidence, and calculated thinking.
+        This is a test part you can edit it to your liking 
       </p>
     </div>
   </div>
