--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio Husain Lokhandwala</title>
+  <title>Portfolio Website</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,15 +13,15 @@
 
   <header>
     <div class="header-left">
-      <div class="logo-circle"><img src="./assets/logo.jpeg" alt="Headshot Husain Lokhandwala" /></div>
+      <div class="logo-circle"><img src="./assets/test.png" alt="Headshot Husain Lokhandwala" /></div>
         <div>
-          <span class="repo-title">HusainBeepBop</span>
-          <span class="repo-subtitle">Mechanical Engineer</span>
+          <span class="repo-title">Your Name</span>
+          <span class="repo-subtitle">What Do you Do</span>
         </div>
       </div>
     
     <div class="status-container">
-      <div class="status-text">Currently: Learning</div>
+      <div class="status-text">Currently: Eating French Fries🍟</div>
       <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
     </div>
   </header>
@@ -31,7 +31,7 @@
     <a href="#projects" data-page="projects" onclick="loadPage('projects')">Projects</a>
     <a href="#blog" data-page="blog" onclick="loadPage('blog')">Blog</a>
     <a href="#contact" data-page="contact" onclick="loadPage('contact')">Contact</a>
-    <a style="visibility: hidden;" href="#startup" data-page="startup" onclick="loadPage('startup')">Start Ups</a>
+    <a href="#startup" data-page="startup" onclick="loadPage('startup')">Start Ups</a>
   </nav>
 
   <main id="main-content" class="main-content"></main>
